--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
               <h5 class="card-title">MatchFit</h5>
               
               <a
-                href="project2_Emmawhyte/index.html"
+                href="assignment2/index.html"
                 class="btn btn-primary orangee"
                 >View</a
               >
